# TFG

ros1/install/: local_setup.sh  setup.sh
ros1/install/computed_torque/share/computed_torque/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/direct_dynamic_controller/include/direct_dynamic_controller/: hardware_interface_adapter copy.h  hardware_interface_adapter.h
ros1/install/direct_dynamic_controller/share/direct_dynamic_controller/: package.dsv  package.ps1  package.sh
ros1/install/joint_trajectory_controller/include/joint_trajectory_controller/: hardware_interface_adapter.h  joint_trajectory_controller.h
ros1/install/joint_trajectory_controller/share/joint_trajectory_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_acado_mpc/share/march_acado_mpc/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_bridge_parameters/lib/pkgconfig/: march_bridge_parameters.pc
ros1/install/march_bridge_parameters/share/march_bridge_parameters/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_data_collector/lib/pkgconfig/: march_data_collector.pc
ros1/install/march_data_collector/share/march_data_collector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_description/share/march_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_gain_scheduling/lib/march_gain_scheduling/: march_gain_scheduling_node
ros1/install/march_gain_scheduling/lib/pkgconfig/: march_gain_scheduling.pc
ros1/install/march_gain_scheduling/share/march_gain_scheduling/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros1/install/march_gazebo_plugins/lib/pkgconfig/: march_gazebo_plugins.pc
ros1/install/march_gazebo_plugins/share/march_gazebo_plugins/: package.dsv  package.ps1  package.sh
ros1/install/march_hardware/lib/march_hardware/: slave_count_check
ros1/install/march_hardware/lib/pkgconfig/: march_hardware.pc
ros1/log/: latest_build
ros1/src/control/computed_torque/: CMakeLists.txt  controller_plugins.xml  package.xml
ros1/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros1/src/libraries/joint_trajectory_controller/: .gitignore  CMakeLists.txt
ros1/src/log/: latest_build
ros1/src/march_launch/launch/: march_S.launch  march_simulation_S.launch
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build
ros2/src/libraries/diagnostic_updater/: CMakeLists.txt  README.md
ros2/src/libraries/march_robot_state_publisher/: .gitignore  CMakeLists.txt
ros2/src/libraries/march_robot_state_publisher/include/robot_state_publisher/: robot_state_publisher.hpp
ros2/src/libraries/march_robot_state_publisher/src/: main.cpp  robot_state_publisher.cpp
ros2/src/libraries/march_robot_state_publisher/test/: two_links_fixed_joint-launch.py  two_links_moving_joint-launch.py
(+729 files in other folders)
